src/test/ui/parser/lex-stray-backslash.rs
// compile-flags: -Z parse-only

\ //~ ERROR: unknown start of token: \
